# CMakeReference

./: .gitignore  README.md
project-with-googletest/: CMakeLists.txt
project-with-subdirectories/: CMakeLists.txt  start.cc
project-with-subdirectories/MathFunctions/: CMakeLists.txt
very-minimal/: CMakeLists.txt  HelloWorld  Makefile  hello-world.cc
